--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 *{
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Futura Lt BT', sans-serif;
     transition: color 0.1s ease-in-out, background-color 0.2s ease-in-out, filter 0.2s ease-in-out;
 }
 
